hphp/test/zend/good/zend/ns_004.php.exp
HipHop Fatal error: Undefined function: \\test\\ns1\\get_class in hphp/test/zend/good/zend/ns_004.php on line 4
